[gd_scene load_steps=7 format=3 uid="uid://bkwjduy3nskeg"]

[ext_resource type="Script" path="res://World.gd" id="1_ufefb"]
[ext_resource type="Texture2D" uid="uid://bklny0kr2ebs2" path="res://VirtualJoystickPack/JoystickSplitted.png" id="3_m5igp"]
[ext_resource type="Script" path="res://JoystickInner.gd" id="4_ec0kx"]
[ext_resource type="Texture2D" uid="uid://du255sudo8tl7" path="res://VirtualJoystickPack/LargeHandleFilled.png" id="4_sy0pa"]
[ext_resource type="Script" path="res://ExcavatorCam.gd" id="6_3683u"]

[sub_resource type="VideoStreamTheora" id="VideoStreamTheora_bd2pb"]

[node name="World" type="Node2D"]
script = ExtResource("1_ufefb")

[node name="JoystickOuterRight" type="Sprite2D" parent="."]
position = Vector2(1385.2, 943.2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_m5igp")

[node name="JoystickOuterLeft" type="Sprite2D" parent="."]
position = Vector2(535.2, 943.2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("3_m5igp")

[node name="JoystickInnerRight" type="Sprite2D" parent="."]
position = Vector2(1385.2, 943.2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_sy0pa")
script = ExtResource("4_ec0kx")

[node name="JoystickInnerLeft" type="Sprite2D" parent="."]
position = Vector2(536.2, 943.2)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_sy0pa")
script = ExtResource("4_ec0kx")

[node name="EngineRPM" type="Label" parent="."]
offset_left = 624.0
offset_top = 888.0
offset_right = 811.0
offset_bottom = 970.0
text = "Engine RPM:"
horizontal_alignment = 1

[node name="ExcavatorCam" type="VideoStreamPlayer" parent="."]
offset_left = 312.0
offset_top = 64.0
offset_right = 1592.0
offset_bottom = 784.0
stream = SubResource("VideoStreamTheora_bd2pb")
expand = true
script = ExtResource("6_3683u")

[node name="StartMotor" type="Button" parent="."]
offset_left = 960.0
offset_top = 960.0
offset_right = 1078.0
offset_bottom = 1027.0
mouse_filter = 2
toggle_mode = true
text = "Start motor"

[node name="StopMotion" type="Button" parent="."]
offset_left = 672.0
offset_top = 960.0
offset_right = 790.0
offset_bottom = 1027.0
mouse_filter = 2
toggle_mode = true
text = "Stop motion"

[node name="Shutdown" type="Button" parent="."]
offset_left = 1088.0
offset_top = 960.0
offset_right = 1206.0
offset_bottom = 1027.0
mouse_filter = 2
toggle_mode = true
text = "Shutdown"

[node name="WorkModeSlider" type="HSlider" parent="."]
offset_left = 880.0
offset_top = 896.0
offset_right = 1208.0
offset_bottom = 960.0
mouse_filter = 2
min_value = 1.0
max_value = 10.0
value = 1.0

[node name="WorkModeLabel" type="Label" parent="WorkModeSlider"]
layout_mode = 0
offset_left = 8.0
offset_top = -32.0
offset_right = 186.0
offset_bottom = -9.0
text = "Requested Work Mode:"

[node name="Instance" type="Label" parent="."]
offset_left = 16.0
offset_top = 40.0
offset_right = 87.0
offset_bottom = 63.0
text = "Instance:"

[node name="Name" type="Label" parent="."]
offset_left = 16.0
offset_top = 63.0
offset_right = 87.0
offset_bottom = 86.0
text = "Name:"

[node name="Hostname" type="Label" parent="."]
offset_left = 16.0
offset_top = 16.0
offset_right = 124.0
offset_bottom = 39.0
text = "Connected to:"

[connection signal="pressed" from="StartMotor" to="." method="_on_start_motor_pressed"]
[connection signal="button_down" from="StopMotion" to="." method="_on_stop_motor_button_down"]
[connection signal="button_up" from="StopMotion" to="." method="_on_stop_motor_button_up"]
[connection signal="pressed" from="StopMotion" to="." method="_on_stop_motion_pressed"]
[connection signal="pressed" from="Shutdown" to="." method="_on_shutdown_pressed"]
[connection signal="value_changed" from="WorkModeSlider" to="." method="_on_work_mode_slider_value_changed"]
